tendrils mean plot separated
1. button added to separate
2. click the button to separate
3. opacity problem fixed

--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -410,6 +410,7 @@
                 style="margin-left: 20px !important; font-weight: normal;">
                 Show mean values
               </label>
+              <button type="button" class="btn btn-light btn-sm" id="separate" value="separate">Separate
             </div>
           </div>
         </div>
