tendril plot updates, resizing still needed

--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -396,21 +396,22 @@
               </svg> Rating Increase
             </div>
             <div>
-              <i class="window minimize icon" style="color:red;"></i> Selected Patient
+              <i class="window minimize icon" style="color:black;"></i> Selected Patient
             </div>
             <div class="form-check  colored-tendrils-button" style="padding-left: 5px;">
               <input class="form-check-input " type="checkbox" value="" id="show-colored-tendrils">
-              <label class="form-check-label" for="defaultCheck1"
+              <label class="form-check-label" for="defaultCheck1" id="color_separate_button_label"
                 style="margin-left: 20px !important; font-weight: normal;">
                 Color by Therapy
+          </label>
             </div>
-            <div class="form-check  colored-tendrils-button" style="padding-left: 5px;">
+            <div class="form-check " style="padding-left: 5px;">
               <input class="form-check-input " type="checkbox" value="" id="show-mean-tendrils">
               <label class="form-check-label" for="defaultCheck11"
                 style="margin-left: 20px !important; font-weight: normal;">
                 Show mean values
               </label>
-              <button type="button" class="btn btn-light btn-sm" id="separate" value="separate">Separate
+              <!-- <button type="button" class="btn btn-light btn-sm" id="separate" value="separate">Separate -->
             </div>
           </div>
         </div>
