--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -429,7 +429,7 @@
 
         <script type="text/javascript" src='graph.js'></script>
 
-        <svg id='internal_svg' width="504pt" height="515pt" viewBox="0 0 504 504">
+        <svg id='internal_svg' width="495pt" height="510pt" viewBox="0 0 504 504">
 
 
           <marker id="triangle" viewBox="0 0 10 10" refX="1" refY="5" markerUnits="strokeWidth" markerWidth="10"
@@ -918,7 +918,7 @@
       </div>
 
 
-      <div id="tendril" style="margin:auto"></div>
+      <div id="tendril" style="margin:auto; height: 37vh; margin-top: -200px;"></div>
       <div onload="main();">
       </div>
     </div>
