--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -19,11 +19,11 @@
 
         <div class="card"
           style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%); border:0;  width: 100%; margin-top: 0%; margin-bottom:5px;">
-          <div class="card-header" style="background:aliceblue">
-            <h5 style="margin: 0 ">Select 2D View</h5>
+          <div class="card-header" style="background:aliceblue; padding:0.85rem 0.7rem !important;">
+            <h5 style="margin: 0; margin-left: -10 !important;  ">Longitudinal Symptom Analysis</h5>
           </div>
           <div class="card-body text-left" style=" font-size: 0.9em; padding: 5px">
-            <button type="button" class="btn btn-light btn-sm btn_without_categ" id="Patients2D">Patients</button>
+            <button type="button" class="btn btn-light btn-sm btn_without_categ" id="Patients2D">Clustering</button>
             <button type="button" class="btn btn-light btn-sm btn_without_categ active" id="SymptomRules">Symptom
               Rules</button>
           </div>
@@ -171,6 +171,33 @@
                   id="Late">Late</button>
               </div>
             </div>
+
+            <div style="margin-top: 0px; margin-bottom: -0px; opacity:0;" id="showTherapyForTendril">
+              <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="Radiation">
+                <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#9854cc"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect width="10" height="10" rx="1" />
+                </svg> Radiation</button>
+              <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="ICCCR"
+                style="margin-right: -5px;">
+                <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="orange"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect width="10" height="10" rx="1" />
+                </svg> IC+Radiation+CC</button>
+  
+              <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="ICRad">
+                <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#058f96"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect width="10" height="10" rx="1" />
+                </svg> IC+Radiation</button>
+              <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="CCRad">
+                <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#4d9221"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <rect width="10" height="10" rx="1" />
+                </svg> CC+Radiation</button>
+            
+              </div>
+
             <div>
               <svg class="bi bi-circle-fill" width="4em" height="3em" viewBox="0 0 60 45" fill="#fff" stroke="grey"
                 xmlns="http://www.w3.org/2000/svg">
@@ -254,31 +281,7 @@
               </div>
 
             </div >
-            <div style="margin-top: 30px; margin-bottom: -19px; opacity:0;" id="showTherapyForTendril">
-            <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="Radiation">
-              <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#9854cc"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect width="10" height="10" rx="1" />
-              </svg> Radiation</button>
-            <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="ICCCR"
-              style="margin-right: -5px;">
-              <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="orange"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect width="10" height="10" rx="1" />
-              </svg> IC+Radiation+CC</button>
 
-            <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="ICRad">
-              <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#058f96"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect width="10" height="10" rx="1" />
-              </svg> IC+Radiation</button>
-            <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="CCRad">
-              <svg class="bi bi-square" width="1em" height="1em" viewBox="0 0 10 10" fill="#4d9221"
-                xmlns="http://www.w3.org/2000/svg">
-                <rect width="10" height="10" rx="1" />
-              </svg> CC+Radiation</button>
-          
-            </div>
           </div>
         </div>
 
@@ -349,7 +352,7 @@
             <button type="button" class="btn btn-light btn-sm category-entry filters-symptoms-list"
               id="enjoymentFilter">enjoyment</button>
             <button type="button" class="btn btn-light btn-sm category-entry filters-symptoms-list"
-              id="activitiesFilter">ativities</button>
+              id="activitiesFilter">activities</button>
             <button type="button" class="btn btn-light btn-sm category-entry filters-symptoms-list"
               id="workFilter">work</button>
             <button type="button" class="btn btn-light btn-sm category-entry filters-symptoms-list"
@@ -932,7 +935,7 @@
           style="position: absolute; height: 98%; margin-top:0px !important; width: 11%; z-index:1 !important;margin-left: 20px;">
           <div class="card" style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%); border:0;  width: 100%;">
             <div class="card-header" style="background:aliceblue">
-              <h5 style="margin: 0 ">Select Time Point</h5>
+              <h5 style="margin: 0 ">Filter by Complete Data</h5>
             </div>
             <div class="card-body text-left" style=" padding: 5px; margin-top:5px; margin-bottom:-5px">
               <div id="time-slider" class="ui labeled ticked slider"></div>
