--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -1277,14 +1277,22 @@
 
         <div id="filtersPanel" class=""
           style="position: absolute; height: 98%; margin-top:0px !important; width: 11%; z-index:1 !important;margin-left: 20px;">
-          <div class="row" style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%);border:0;width: 250%;position: absolute;left: 125%;height: 10px;">
-            <div class="col-5 " style="background:aliceblue;height: 32px;text-align: center;margin-top: 4px;">
+          <div class="row" style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%);border:0;width: 262%;position: absolute;left: 125%;height: 10px;">
+            <div class="col " style="height: 20px;text-align: center;margin-top: -4px;">
               <h5 style="margin: 6px;">Filter by Complete Data</h5>
             </div>
-            <div class="col-7" style="padding: 5px;margin-top: -5px;margin-bottom:-5px;">
+            <div class="col" style="padding: 5px;margin-top: -5px;margin-bottom:-5px; position: absolute; top: 237%; left: -3%;">
               <div id="time-slider" class="ui labeled ticked slider"></div>
 	          </div>
           </div>
+
+          <!-- <div class="row" style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%);border:0;width: 262%;position: absolute;left: 125%;height: 10px;">
+            <div class="col " style="background:aliceblue;height: 32px;text-align: center;margin-top: -10px;">
+              <h5 style="margin: 6px;">Filter by Complete Data</h5>
+            </div>
+            <div class="col" style="padding: 5px;margin-top: -5px;margin-bottom:-5px;position: absolute;top: 237%;left: -3%;">
+              <div id="time-slider" class="ui labeled ticked slider" ></div>
+          </div> -->
 
 
           <div class="card"
