large bubles on tendrils for hovering and + sign for heatmap in the legend

--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -1378,7 +1378,7 @@
 
           <!-- <div class="card" style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%); border:0;  width: 100%; margin-top:5px; height: 47%;"> -->
           <div class="card"
-            style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%); border:0;  width: 100%; margin-top:5px; height:25%">
+            style="box-shadow: 0 10px 20px 0 rgb(0 0 0 / 5%); border:0;  width: 100%; margin-top:5px; height:27%">
             <div class="card-header" style="background:aliceblue">
               <h5 style="margin: 0 ">Patients Overview</h5>
             </div>
@@ -1430,7 +1430,8 @@
                           <rect width="10" height="10" />
                         </svg>
                       </div>
-                    </div>
+                    
+                  </div>
                     <div class="form-check  show-percentages" style=" ">
                       <input class="form-check-input " type="checkbox" value="" id="show-percentages">
                       <label class="form-check-label" for="defaultCheck1"
@@ -1438,7 +1439,13 @@
                         Show Percentages
                       </label>
                     </div>
-                    <div class="form-check show-patient-checkbox" style="visibility: hidden; ">
+                    <div class="form-check show-patient-checkbox" style="visibility: hidden; margin-top: 10px">
+                      <div style="display: flex;flex-direction: row;">
+                        <div style="font-weight: bolder; font-size: large; margin-right: 10px;">
+                          +
+                        </div>
+                        <div>Selected Patient</div>
+                      </div>
                       <input class="form-check-input " type="checkbox" value="" id="show-patient">
                       <label class="form-check-label" for="defaultCheck1"
                         style="margin-left: 15px !important; font-weight: normal;">
