added T0 to patient filters

--- a/Symptoms_Project-master/index.html
+++ b/Symptoms_Project-master/index.html
@@ -116,11 +116,16 @@
                   style="  font-weight: 700 !important; padding:.0rem .5rem !important; margin-top: -7px;"
                   title="Reset filters" data-category="domain" id="tumorReset">x</button>
               </h6>
-              <div class="category-entries-container  " id="filters-list3" style="margin-bottom: 10px;">
-                <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="T1">
+              <div class="category-entries-container  " id="filters-list3" style="margin-bottom: 10px; margin-left: -5px;">
+                <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="T0">
                   <svg class="bi bi-square-fill" width="1em" height="1em" viewBox="0 0  10 10" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <rect width="4" height="4" rx="1" />
+                  </svg>T0</button>
+                <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="T1">
+                  <svg class="bi bi-square-fill" width="1em" height="1em" viewBox="0 0  10 10" fill="currentColor"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <rect width="5" height="5.5" rx="1" />
                   </svg>T1</button>
                 <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="T2">
                   <svg class="bi bi-square-fill" width="1em" height="1em" viewBox="0 -1  10 10" fill="currentColor"
@@ -132,7 +137,7 @@
                     xmlns="http://www.w3.org/2000/svg">
                     <rect width="8" height="8" rx="1" />
                   </svg>T3</button>
-                <button type="button" class="btn btn-light  btn-sm category-entry filters-list" id="T4">
+                <button type="button" class="btn btn-light  btn-sm category-entry filters-list" style="margin-right: -15px;" id="T4">
                   <svg class="bi bi-square-fill" width="1em" height="1em" viewBox="0 0  10 10" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <rect width="10" height="10" rx="1" />
